--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                 <div class="review">
                     <h3 class="allh3">好評如潮</h3>
                     <ul class="reviewmenu">
-                        <li class="review-item"><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/53d3c0b0e4d2885789ac1fcb666e427365a39207/chatTalker_images/user01.jpg" alt="人1"><p class="p1">原來聊天機器人可以這麼有人性！團隊有<br>完整的行銷計畫提供數位整合，讓我們公<br>司的產品用更活潑的方式讓使用者認識。</p><h4 class="allh4">清心寡慾設計公司</h4><p class="p2">Lina 執行長</p></li>
-                        <li class="review-item"><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/53d3c0b0e4d2885789ac1fcb666e427365a39207/chatTalker_images/user02.jpg" alt="人2"><p class="p1">團隊很積極的協助行銷追蹤，針對機器人<br>進行優化，讓我們一個月內提高10000個<br>追蹤者，客戶體驗回饋很正面！</p><h4 class="allh4">subwhat 行銷公司</h4><p class="p2">Zoe 活動長</p></li>
-                        <li class="review-item"><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/53d3c0b0e4d2885789ac1fcb666e427365a39207/chatTalker_images/user03.jpg" alt="人3"><p class="p1">經營了好久的IG，一直無法提升粉絲數，<br>和團隊合作後，才知道可以用聊天機器人<br>玩這麼豐富的行銷活動！太讚拉～</p><h4 class="allh4">油土伯</h4><p class="p2">HowBig</p></li>
+                        <li class="review-item1"><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/53d3c0b0e4d2885789ac1fcb666e427365a39207/chatTalker_images/user01.jpg" alt="人1"><p class="p1">原來聊天機器人可以這麼有人性！團隊有<br>完整的行銷計畫提供數位整合，讓我們公<br>司的產品用更活潑的方式讓使用者認識。</p><h4 class="allh4">清心寡慾設計公司</h4><p class="p2">Lina 執行長</p></li>
+                        <li class="review-item2"><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/53d3c0b0e4d2885789ac1fcb666e427365a39207/chatTalker_images/user02.jpg" alt="人2"><p class="p1">團隊很積極的協助行銷追蹤，針對機器人<br>進行優化，讓我們一個月內提高10000個<br>追蹤者，客戶體驗回饋很正面！</p><h4 class="allh4">subwhat 行銷公司</h4><p class="p2">Zoe 活動長</p></li>
+                        <li class="review-item3"><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/53d3c0b0e4d2885789ac1fcb666e427365a39207/chatTalker_images/user03.jpg" alt="人3"><p class="p1">經營了好久的IG，一直無法提升粉絲數，<br>和團隊合作後，才知道可以用聊天機器人<br>玩這麼豐富的行銷活動！太讚拉～</p><h4 class="allh4">油土伯</h4><p class="p2">HowBig</p></li>
                     </ul>
                 </div>
             </div>
